# privacy

./: .gitignore  LICENSE  NOTICE  README.md
docs/: how_to_run.md
research/: PARALLEL.txt  privacy_new.txt
research/uvcc/: requirements-uvcc-base.txt
research/uvcc/scripts/: generate_coverage_matrix.py
research/uvcc/uvcc-client/: README.md
research/uvcc/uvcc-client/uvcc_client/: __init__.py  cli.py  demo_job.py  party_identity.py  party_train.py  prime_api.py  ssh_runner.py
research/uvcc/uvcc-contracts/: foundry.toml
research/uvcc/uvcc-contracts/lib/: forge-std  openzeppelin-contracts
research/uvcc/uvcc-contracts/src/: AVLStakingManager.sol  MockAVL.sol  ProviderBondRegistry.sol  UVCCJobLedger.sol
research/uvcc/uvcc-contracts/test/: UVCCJobLedger.t.sol
research/uvcc/uvcc-demo/: .last_failover_inject_latitude_out.txt  .last_failover_inject_nebius_out.txt  .last_failover_inject_out.txt  .last_failover_inject_runpod_out.txt  .last_failover_out.txt  .last_failover_resume_out.txt  .last_full_crusoecloud_out.txt  .last_full_datacrunch_out.txt  .last_full_hyperstack_out.txt  .last_full_runpod_out.txt  .last_mixed_3providers_full_out.txt  .last_mixed_3providers_smoke_out.txt  PRIME_3NODE_RUNBOOK.md  README.md  bundle_logs_explained.py  inject_failover_after_checkpoint.py  job_big_4090_trace.json  job_full_25steps_trace.json  job_smoke_2steps_trace.json  job_smoke_3steps_trace.json  multi_domain_run_status_20251219.md  record_live_logs.py  record_live_logs_append.py  run_demo.py  run_prime_3node.py  run_prime_3node_multi_domains.py  wait_for_provider_then_run.py  watch_prime_3node_status.py
research/uvcc/uvcc-party/: pytest.ini
research/uvcc/uvcc-party/tests/: group_tags_test_v1.py  test_chacha20_block_vector.py  test_crc32c.py  test_cuda_a2b_packers.py  test_cuda_dpf_dcf_kernels.py  test_cuda_dpf_dcf_point_eval_kernels.py  test_cuda_fss_bitpack32.py  test_cuda_gf2_and_a2b_kernels.py  test_cuda_matmul_u64.py  test_cuda_oplut_phase2_w16.py  test_cuda_oplut_phase2_w8.py  test_cuda_trunc_apply_u64.py  test_dpf_aes128_ar64_v1.py  test_dpf_dcf_point_eval.py  test_fss_block_v1.py  test_fss_dir_v1.py  test_fss_executor_cpu.py  test_fss_executor_cuda_step.py  test_fss_to_rss_edge_mapping.py  test_fss_transcript_commits.py  test_gemm_beaver_tcf_v0a_e2e.py  test_hkdf_prg_ctx_v1.py  test_interpreter_sgir_add_open.py  test_interpreter_sgir_op_lut_public_w8.py  test_netframe_roundtrip.py  test_no_placeholders_repo.py  test_op_cmp_fast_dcf_w8.py  test_op_cmp_v1.py  test_op_cmp_v1_w32.py  test_op_lut_public_v1_w8_e2e.py  test_open_rounds.py  test_policy_canon_v1.py  test_recorder.py  test_relay_tls_ca.py  test_repo_layout_build_plan.py  test_sgir_parse_v1.py  test_sig_v1.py  test_sks_freivalds_gemm_tile_e2e.py  test_tcf_v0a_tile_triple_e2e.py  test_tcf_v0b_cache_no_repl.py  (+2 more)
research/uvcc/uvcc-party/uvcc_party/: __init__.py  b2a.py  cbor_det.py  cmp.py  crc32c.py  dpf_aes128.py  dpf_dcf.py  edabit.py  eip712.py  fss_block.py  fss_dir.py  fss_executor.py  fss_plan.py  fss_transcript.py  gemm.py  gf2_and.py  gf2_triples.py  hkdf.py  interpreter.py  kdf_info.py  netframe.py  op_lut.py  op_lut_blob.py  op_lut_plan.py  open.py  party.py  policy_canon.py  prg_ctx.py  proof_bundle.py  recorder.py  relay_client.py  rss.py  sgir.py  sig.py  sks.py  tcf.py  transcript.py  trunc.py
research/uvcc/uvcc-party/uvcc_party/cuda_ext/: __init__.py  loader.py  uvcc_cuda_ext.cpp  (+3 more)
research/uvcc/uvcc-relay/: README.md  relay_server.py
research/uvcc/uvcc-relay/tests/: test_relay_smoke.py
research/uvcc/uvcc-spec/: README.md
research/uvcc/uvcc-spec/coverage/: group_tags_impl_v1.md
research/uvcc/uvcc-spec/profiles/: uvcc_profile_v1.md
research/uvcc/uvcc-spec/structs/: uvcc_a2b_pack_v1.h  uvcc_b2a_pack_v1.h  uvcc_bool_gpu_abi_v1.h  uvcc_dpf_dcf_gpu_abi_v1.h  uvcc_fss_block_v1.h  uvcc_fss_dir_v1.h  uvcc_fss_keyrec_v1.h  uvcc_fss_plan_v1.h  uvcc_gf2_triples_v1.h  uvcc_kdf_info_v1.h  uvcc_nccl_frames_v1.h  uvcc_netframe_v1.h  uvcc_oplut_plan_v1.h  uvcc_oplut_record_v1.h  uvcc_policy_wire_v1.h  uvcc_prg_ctx_v1.h  uvcc_rss_pairs_v1.h  uvcc_sgir_v1.h  uvcc_transcript_leaf_v1.h  uvcc_trunc_pack_v1.h
research/uvcc/uvcc-spec/tests/: structs_compile.c  uvcc_crypto_harness_v1.c  uvcc_fss_v1_test.c
research/uvcc/uvcc-verifier/: README.md
research/uvcc/uvcc-verifier/tests/: test_verifier_proof_bundle_v1.py
research/uvcc/uvcc-verifier/uvcc_verifier/: __init__.py  __main__.py  cli.py  proof_bundle_v1.py  transcript_v1.py
research/uvcc_native/: CMakeLists.txt  README.md  UVCC_Phase6_Paper.tex  UVCC_Phase6_Paper_IEEE.tex  UVCC_Phase6_Paper_IEEEJournal.tex  bundle_nccl_smoke_logs.py  bundle_phase6_all_logs_explained.py  run_prime_native_toy_open.py  uvcc_native_bundle_latest.tgz
research/uvcc_native/bundles/: out-prime-native-phase6-r8s4t2-m32-retry2-20251222T141946Z.tgz
research/uvcc_native/figs/: metrics_summary.txt  metrics_table.tex
research/uvcc_native/scripts/: make_phase6_figs.py
research/uvcc_native/tests/: test_blv1.cpp  test_dp_optim.cpp  test_frame_v1.cpp  test_gemm_beaver_v1.cpp  test_ids_msgid.cpp  test_ids_msgid_v1.cpp  test_ids_opid_fssid.cpp  test_ids_sid.cpp  test_lift_tlv.cpp  test_nccl_groups.cpp  test_open_arith_v1.cpp  test_phase6_determinism.cpp  test_phase6_matrix.cpp  test_pp_schedule.cpp  test_sha256.cpp  test_slots_ops.cpp  test_tcf_v0a.cpp  test_transcript_v1.cpp  test_transport_v1.cpp  test_wvole_stub.cpp
research/uvcc_native/tools/: uvcc_worker_main.cpp
research/uvcc_native/uvcc/: arena.cpp  arena.h  audit.cpp  audit.h  base64.cpp  base64.h  beaver_types.h  blv1.cpp  blv1.h  bytes.cpp  bytes.h  clock.cpp  clock.h  config.cpp  config.h  crc32c.cpp  crc32c.h  device_buffer.h  dp.cpp  dp.h  frame.cpp  frame.h  fss.cpp  fss.h  gemm_beaver.cpp  gemm_beaver.h  harness.cpp  harness.h  hex.h  ids.cpp  ids.h  keys.cpp  keys.h  lift.cpp  lift.h  log.cpp  log.h  nccl.cpp  nccl.h  net.cpp  (+49 more)
research/uvcc_parallel/: .last_dp_out.txt  DP_RUNBOOK.md  README.md  __init__.py  bundle_dp_logs_explained.py  dp_ids.py  dp_roots.py  party_train_dp.py  run_prime_dp_3xR.py
